<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RegisterActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:text="Daftar Akun"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/edtNimRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingStart="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintTop_toBottomOf="@id/textView"
        android:layout_marginStart="20dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/nim"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:background="@drawable/edt_input"/>

    <EditText
        android:id="@+id/edtPasswordRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/edt_input"
        android:hint="@string/password"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintTop_toBottomOf="@id/edtNimRegister"
        tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck"
        tools:layout_editor_absoluteX="20dp" />
    <EditText
        android:id="@+id/edtNamaLengkap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingStart="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintTop_toBottomOf="@id/edtPasswordRegister"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/nama"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:background="@drawable/edt_input"/>
    <EditText
        android:id="@+id/edtAlamat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingStart="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintTop_toBottomOf="@id/edtNamaLengkap"
        android:layout_marginStart="20dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/alamat"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:background="@drawable/edt_input"/>
    <EditText
        android:id="@+id/edtNomorHP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingStart="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintTop_toBottomOf="@id/edtAlamat"
        android:layout_marginStart="20dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/nohp"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:background="@drawable/edt_input"/>
    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingStart="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintTop_toBottomOf="@id/edtNomorHP"
        android:layout_marginStart="20dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/email"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:background="@drawable/edt_input"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edt_input"
        app:layout_constraintTop_toBottomOf="@id/edtEmail"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="50dp"
        android:text="@string/register"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/white"/>

</androidx.constraintlayout.widget.ConstraintLayout>