<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RegisterActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:text="Detail Profil"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/edtNimProfil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingStart="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintTop_toBottomOf="@id/textView"
        android:layout_marginStart="20dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/nim"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:background="@drawable/edt_input"/>
    <EditText
        android:id="@+id/edtPasswordProfil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingStart="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintTop_toBottomOf="@id/edtNimProfil"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/password"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:background="@drawable/edt_input"/>
    <EditText
        android:id="@+id/edtNamaLengkapProfil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingStart="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintTop_toBottomOf="@id/edtPasswordProfil"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/nama"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:background="@drawable/edt_input"/>
    <EditText
        android:id="@+id/edtAlamatProfil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingStart="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintTop_toBottomOf="@id/edtNamaLengkapProfil"
        android:layout_marginStart="20dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/alamat"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:background="@drawable/edt_input"/>
    <EditText
        android:id="@+id/edtNomorProfil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingStart="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintTop_toBottomOf="@id/edtAlamatProfil"
        android:layout_marginStart="20dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/nohp"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:background="@drawable/edt_input"/>
    <EditText
        android:id="@+id/edtEmailProfil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingStart="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintTop_toBottomOf="@id/edtNomorProfil"
        android:layout_marginStart="20dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/email"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:background="@drawable/edt_input"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnUbah"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edt_input"
        app:layout_constraintTop_toBottomOf="@id/edtEmailProfil"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="50dp"
        android:text="@string/ubah"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/white"/>

</androidx.constraintlayout.widget.ConstraintLayout>